Lab 09 "Largest Three Numbers" from the lesson for Sets and Maps.